# website

./: pyproject.toml
portfolio/: __init__.py  auth.py  blog.py  db.py
portfolio/templates/: base.html
src/: app.py
src/static/: style.css
src/templates/: about.html  base.html  child.html  main.html
tests/: conftest.py  test_blog.py  test_db.py  test_factory.py
