[project]
name = "portfolio"
version = "1.0.0"
description = "The blog app from the Flask tutorial (with the name changed)"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["portfolio"]